# data-structures

./: data-structures.cabal  stack.yaml
app/week1/: Problem1.hs  Problem2.hs  Problem3.hs  \
app/week3/: Problem1.hs  Problem2.hs
app/week4/: Problem1.hs  Problem2.hs
app/week6/: Problem1.hs
