name:                data-structures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/data-structures#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable week1-problem1-exe
  hs-source-dirs:      app/week1
  main-is:             Problem1.hs
  ghc-options:         -O -main-is Problem1
  build-depends:       base
                     , data-structures
  default-language:    Haskell2010

executable week1-problem2-exe
  hs-source-dirs:      app/week1
  main-is:             Problem2.hs
  ghc-options:         -O -main-is Problem2
  build-depends:       array >= 0.5.0.0
                     , base
                     , containers >= 0.5.5.1
                     , data-structures
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/data-structures
